# BITWaves

./: .gitignore  CMakeLists.txt  README.md
Classes/: AppDelegate.cpp  BounceAndShare.cpp  BounceAndShare.hpp  Circle.cpp  Circle.hpp  CircleEmitter.cpp  CircleEmitter.hpp  FMODAudioEngine.cpp  FMODAudioEngine.h  FMOD_commonPlatform.h  FMOD_commonPlatform_android.cpp  FMOD_commonPlatform_ios.mm  Functions.cpp  Functions.h  HelpOverlay.cpp  HelpOverlay.h  InstrumentScene.cpp  InstrumentScene.h  Konstants.h  MainMenu.cpp  MainMenu.hpp  ProjectHandling.cpp  ProjectHandling.hpp  ProjectNames.cpp  ProjectNames.hpp  ProjectNamesLabel.cpp  ProjectNamesLabel.hpp  SeqSoundRect.cpp  SeqSoundRect.hpp  SequencerScene.cpp  SequencerScene.h  Uploader.cpp  Uploader.hpp  Uploader.m  Uploader.mm  iCloud.hpp  iCloud.mm  iosPreferences.h  iosPreferences.mm
Resources/: blowExplosion_flame.plist  blowExplosion_smoke.plist  poff.plist
cocos2d/cmake/Modules/: CocosConfigDepend.cmake
cocos2d/cocos/2d/: CCFontAtlas.cpp
cocos2d/cocos/audio/apple/: AudioCache.h
cocos2d/cocos/platform/android/ControllerManualAdapter/: AndroidManifest.xml
cocos2d/cocos/platform/android/java/: AndroidManifest.xml
cocos2d/cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxActivity.java
cocos2d/cocos/platform/android/libcocos2dx/: build.gradle  proguard-rules.pro
cocos2d/cocos/platform/android/libcocos2dx-with-controller/: build.gradle
proj.android/: build.gradle.kts  gradle.properties  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle  build.gradle.kts  build.gradle.kts.old  proguard-rules.pro
proj.android/app/res/values/: strings.xml
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/main/java/com/stianremvik/bitwaves2/: AppActivity.java
proj.android/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/ios/: AppController.mm  CMakeCache.txt  Info.plist  cmake_install.cmake  main.m
proj.ios_mac/ios/BITWaves.xcodeproj/: project.pbxproj
proj.ios_mac/ios/BITWaves.xcodeproj/project.xcworkspace/xcuserdata/stianremvik.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios_mac/ios/BITWaves.xcodeproj/xcuserdata/stianremvik.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
proj.ios_mac/ios/BITWaves.xcodeproj/xcuserdata/stianremvik.xcuserdatad/xcschemes/: xcschememanagement.plist
proj.ios_mac/ios/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
proj.ios_mac/ios/Images.xcassets/AppIcon.appiconset/: Contents.json
proj.ios_mac/ios/Settings.bundle/: Root.plist
proj.ios_mac/ios/engine/cocos/core/: cmake_install.cmake
proj.ios_mac/ios/engine/cocos/core/BITWaves.build/Debug-iphoneos/cocos2d.build/Objects-normal/arm64/: AudioCache.d  AudioEngine-inl.dia  AudioPlayer.d  BufferMTL.d  BufferManager.d  CC3DProgramInfo.d  CCAABB.d  CCActionCamera.d  CCActionGrid.d  CCActionInterval.d  CCActionObject.d  CCActionTiledGrid.d  CCActionTimeline.d  CCActionTween.d  CCAffineTransform.d  CCAnimationCache.d  CCApplication-ios.d  CCAtlasNode.d  CCAutoPolygon.d  CCBatchNode.d  CCBillBoard.d  CCBone.d  CCBoneNode.d  CCBundleReader.d  CCCallbackCommand.d  CCCamera.d  CCClippingNode.d  CCClippingRectangleNode.d  CCColliderDetector.d  CCComRender.d  CCComponent.d  CCComponentContainer.d  CCControl.d  CCControlButton.d  CCControlColourPicker.d  CCControlHuePicker.d  CCControlPotentiometer.d  CCControlSlider.d  CCController-apple.d  CCCustomCommand.d  (+238 more)
proj.ios_mac/ios/engine/cocos/core/BITWaves.build/Debug-iphoneos/cocos2d.build/Objects-normal/armv7/: cocos2d.LinkFileList
proj.ios_mac/ios/engine/cocos/core/BITWaves.build/Debug-iphonesimulator/cocos2d.build/: dgph
proj.ios_mac/ios/engine/cocos/core/BITWaves.build/Debug-iphonesimulator/cocos2d.build/Objects-normal/x86_64/: ArmatureNodeReader.d  AssetsManager.d  AssetsManagerEx.d  AudioDecoder.d  AudioEngine-inl.d  AudioEngine-inl.dia  AudioEngine.d  BoneNodeReader.d  ButtonReader.d  CCAction.d  CCActionCatmullRom.d  CCActionEase.d  CCActionFrame.d  CCActionFrameEasing.d  CCActionGrid3D.d  CCActionInstant.d  CCActionManager.d  CCActionManagerEx.d  CCActionNode.d  CCActionPageTurn3D.d  CCActionProgressTimer.d  CCActionTimelineCache.d  CCActionTimelineNode.d  CCAnimate3D.d  CCAnimation.d  CCAnimation3D.d  CCArmature.d  CCArmatureAnimation.d  CCArmatureDataManager.d  CCArmatureDefine.d  CCAsyncTaskPool.d  CCAttachNode.d  CCAutoreleasePool.d  CCBundle3D.d  CCBundle3DData.d  CCCameraBackgroundBrush.d  CCComAttribute.d  CCComAudio.d  CCComController.d  CCComExtensionData.d  (+229 more)
proj.ios_mac/ios/engine/cocos/core/BITWaves.build/Release-iphoneos/cocos2d.build/: dgph
proj.ios_mac/ios/engine/cocos/core/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
proj.ios_mac/ios/engine/cocos/core/cocos2d_libs.xcodeproj/: project.pbxproj
proj.ios_mac/mac/: Info.plist
